--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,1 @@
-#
-#JDBC properties
-#
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
-spring.datasource.username=root
-spring.datasource.password=1234
+#server.port=8081
